2009-08-24  Ulrich Drepper  <drepper@redhat.com>

	* math/math.h: Define math_errhandling of __FAST_MATH__ is not defined.
	* sysdeps/i386/fpu/bits/mathinline.h: Undefine math_errhandling if we
	are using the inline optimizations.

	* sysdeps/x86_64/fpu/bits/mathinline.h (__signbit): Optimize.
	(__signbitf): Likewise.

2009-08-23  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c (parse_dup_op): Verify the expression is correctly
	terminated.
	* posix/Makefile (tests): Add bug-regex29.
	* posix/bug-regex29.c: New file.

	* posix/unistd.h: Define _POSIX_VERSION and _POSIX2_* correctly if
	older POSIX versions are selected.

	* stdio-common/printf_fp.c: ISO C expects to print the sign of NaN
	as well.
	* stdio-common/printf_fphex.c: Likewise.
	* stdio-common/tstdiomisc.c: Add more tests.

	* locale/locale.h: Include xlocale.h and the thread-local locale
	declarations for XPG7, not XPG6.

2009-08-21  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/powerpc/powerpc32/____longjmp_chk.S: Removed.
	* sysdeps/powerpc/powerpc64/____longjmp_chk.S: Removed.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/____longjmp_chk.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/____longjmp_chk.S: New file.
	* sysdeps/powerpc/powerpc32/__longjmp-common.S: Move CHECK_SP earlier.
	* sysdeps/powerpc/powerpc32/fpu/__longjmp-common.S: Likewise.

2009-08-20  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/elf/backtracesyms.c (__backtrace_symbols):
	Use l_addr instead of l_map_start (dli_fbase).
	Print "FILE([+-]OFFSET) [ADDRESS]" with the file-relative
	address when there is no proximate symbol.
	* sysdeps/generic/elf/backtracesymsfd.c (__backtrace_symbols_fd):
	Likewise.

2009-08-16  Ulrich Drepper  <drepper@redhat.com>

	* scripts/gen-as-const.awk: Fix test for 64-bit platform.

2009-08-14  Ulrich Drepper  <drepper@redhat.com>

	* test-skeleton.c (signal_handler): Renamed from timeout_handler.
	Also handle SIGINT.  In that case only do the cleanup and then