@@ -1,5 +1,9 @@
 2009-08-24  Ulrich Drepper  <drepper@redhat.com>
 
+	* math/s_fdim.c: In case of overflows set errno.
+	* math/s_fdimf.c: Likewise.
+	* math/s_fdiml.c: Likewise.
+
 	* math/math.h: Define math_errhandling of __FAST_MATH__ is not defined.
 	* sysdeps/i386/fpu/bits/mathinline.h: Undefine math_errhandling if we
 	are using the inline optimizations.
